Added page switching functionality

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <!-- <div  alt="Alexey Malfunction" class="logo"></div> -->
             </div>
             <div class="header__nav">
-                <a href="#" class="nav__item">About</a>
-                <a href="#" class="nav__item">Works</a>
-                <a href="#" class="nav__item">Contacts</a>
+                <a href="?page=about" class="nav__item">About</a>
+                <a href="?page=works" class="nav__item">Works</a>
+                <a href="?page=contacts" class="nav__item">Contacts</a>
                 <span class="filler-line"></span>
             </div>
         </header>
