Added contacts page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <footer class="footer">
             <div class="footer__social">
                 <span class="filler-line"></span>
-                <a href="mailto:malfunctionn@gmail.com" target='_blank' class="social__link">
-                    <img src='./src/img/email.svg' alt="Email" title="Email to malfunctionn@gmail.com" class="social__link-img">
+                <a href="mailto:malfun.ctionn@gmail.com" target='_blank' class="social__link">
+                    <img src='./src/img/email.svg' alt="Email" title="Email to malfunc.tionn@gmail.com" class="social__link-img">
                 </a>
                 <a href="https://github.com/Antizycle" target='_blank' class="social__link">
                     <img src='./src/img/github.svg' alt="Github" title="My GitHub Repository" class="social__link-img">
