Few puny tweaks here and there

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,11 +1,16 @@
 <p class="sub-title">Alexey Melnichenko</p>
 <div class="title">Frontend Developer</div>
-<div class="about-text">Hey there! My name is Alexey. I'm 36 years old and I live in Tbilisi Georgia.
-    I am abosolutely fanscinated by web development and in particular with front-end portion of it! How it evolved over the years. How stunningly powerful yet so simple is CSS in conjunction with HTML and especialy with JavaScript. And what endless possibilities it provides!
-    I work with JavaScript and TypeScript, HTML, CSS. Have experience with React framework.
-    Even though I've started to learn it in depth rather recently, I've been doing some programming and wed design in past years. And I'm keen to gain more knowledge in the field.
-    A believe my working experience on different roles and vast scope of my responsibilities over past years will give me wider approach to my tasks.
-    Looking forward to work with you!
+<div class="about-text">
+    <p>Hey there! My name is Alexey. I'm 36 years old and I live in Tbilisi Georgia.</p>
+    <p>
+        I am abosolutely fanscinated by web development and in particular with front-end portion of it! How it evolved over the years. How stunningly powerful yet so simple is CSS in conjunction with HTML and especialy with JavaScript. And what endless possibilities it provides!
+        I work with JavaScript and TypeScript, HTML, CSS. Have experience with React framework.
+    </p>
+    <p>
+        Even though I've started to learn it in depth rather recently, I've been doing some programming and wed design in past years. And I'm keen to gain more knowledge in the field.
+        A believe my working experience on different roles and vast scope of my responsibilities over past years will give me wider approach to my tasks.
+        Looking forward to work with you!
+    </p>
 </div>
 <a href="?page=contacts">
 <div class="btn">Contact Me</div>
