--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -19,7 +19,7 @@
             <a href="./src/files/melnichenko-a_cv-eng_print.pdf" target='_blank'>cv english (print version)</a> 
         </li>
         <li>
-            Looking forward working with you!
+            Looking forward to work with you!
         </li>
     </ul>
 </div>
