Refactored ajax into fetch

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </header>
         <element class="hex-element" id="hexElement"></element>
-        <main class="main" w3-include-html="./src/pages/about.html" id="include">
+        <main class="main" fetch-html="./src/pages/about.html" id="include">
             
         </main>
         <footer class="footer">
