Updated works page and a few css tweaks

--- a/src/pages/works.html
+++ b/src/pages/works.html
@@ -1,22 +1,62 @@
 <div class="title">My Works</div>
 <ul class="card-wrapper">
     <li class="card">
-        <a href='https://antizycle.github.io/Game-of-Life/' target='_blank' alt='Game of Life on JS'>
-            <img src="./src/img/gameoflife.png" class="card__img">
-            <h1>Game of Life</h1>
+        <a href='http://antizycle.online/' target='_blank' alt='Alexey Melnichenko Presentation page'>
+            <img src="./src/img/mypage.png" class="card__img">
+            <h1 class="underline-text">antizycle.online</h1>
             <p>
-                Little zero-player cell automation game on pure JavaScript
-                based on concept originaly devised by the British 
-                mathematician John Horton Conway.
+                Alexey Melnichenko Homepage.
+                Html, responsive css.
+                A bit of basic JavaScript
+                for pages and theme switching.<br />
+                <a href='https://github.com/Antizycle/MyPage' target='_blank' class="underline-text">
+                    GitHub Repo
+                </a>
             </p>
         </a>
     </li>
     <li class="card">
-        <a href='https://икра39.рф' target='_blank' alt='Чёрная икра в Калининграде'>
-            <img src="./src/img/caviar_01.jpg" class="card__img">
-            <h1>икра39.рф</h1>
+        <a href='./gol/' target='_blank' alt='Game of Life on JS'>
+            <img src="./src/img/gameoflife.png" class="card__img">
+            <h1 class="underline-text">Game of Life</h1>
             <p>
-                Интернет магазин чёрной икры в Калининграде
+                Little zero-player cell automation game on pure JavaScript
+                based on concept originaly devised by the British 
+                mathematician John Horton Conway.<br />
+                <a href='https://github.com/Antizycle/Game-of-Life' target='_blank' class="underline-text">
+                    GitHub Repo
+                </a>
+            </p>
+        </a>
+    </li>
+    <li class="card">
+        <a href='./gol_react/' target='_blank' alt='Game of Life on React'>
+            <img src="./src/img/gameoflife_react.png" class="card__img">
+            <h1 class="underline-text">GoL.React</h1>
+            <p>
+                Game of Life implementation on React.
+                Same functionality.
+                Used: JavaScript and Typescipt, React<br />
+                Develompment: Node.js, Web-pack, EsLint<br />
+                <a href='https://github.com/Antizycle/react-test-gol' target='_blank' class="underline-text">
+                    GitHub Repo
+                </a>
+            </p>
+        </a>
+    </li>
+    <li class="card">
+        <a href='./caviar/' target='_blank' alt='Чёрная икра в Калининграде'>
+            <img src="./src/img/caviar_01.jpg" class="card__img">
+            <h1 class="underline-text">икра39.рф</h1>
+            <p>
+                <a href='xn--39-6kc5ak0b.xn--p1ai/' target='_blank' class='underline-text'>
+                    Original online store</a>
+                    currently in development on React
+                </a>
+                <br />
+                <a href='https://github.com/Antizycle/caviar-react' target='_blank' class="underline-text">
+                    GitHub Repo
+                </a>
             </p>
         </a>
     </li>
